<resources>
    <string name="app_name">V.League Ticket</string>
    <string name="order_success_title">Đặt hàng thành công</string>
    <string name="new_season_kits_banner">Banner áo đấu mùa mới</string>
    <string name="v_league">V.LEAGUE</string>
    <string name="shop_banner">Banner cửa hàng</string>
    <string name="product_name_placeholder">Tên sản phẩm</string>
    <string name="product_price_placeholder">500.000&#273;</string>
    <string name="previous">Trước</string>
    <string name="next">Sau</string>

    <string name="new_arrival">MỚI VỀ</string>
    <string name="hero_title">Áo đấu V.League chính hãng</string>
    <string name="hero_subtitle">Sản phẩm câu lạc bộ cho mùa giải mới.</string>
    <string name="shop_now">MUA NGAY</string>
    <string name="tickets">Vé</string>
    <string name="jerseys">Áo đấu</string>
    <string name="fan_gear">Đồ cổ vũ</string>
    <string name="shop_by_club">Cửa hàng theo CLB</string>
    <string name="view_all">XEM TẤT CẢ &gt;</string>
    <string name="popular_merchandise">Sản phẩm nổi bật</string>
    <string name="badge_authentic">CHÍNH HÃNG</string>
    <string name="badge_vleague_gear">ĐỒ V.LEAGUE</string>
    <string name="badge_pro_match_grade">CHUẨN THI ĐẤU</string>
    <string name="product_hanoi_fc">Áo sân nhà Hà Nội FC 24/25</string>
    <string name="price_hanoi_fc">799k</string>
    <string name="product_elite_cap">Mũ cổ động viên cao cấp</string>
    <string name="price_elite_cap">250k</string>
    <string name="product_pro_jersey">Áo sân nhà chính hãng 2024</string>
    <string name="price_pro_jersey">1.2M</string>
    <string name="buy_now">MUA NGAY</string>
    <string name="next_big_match">Trận đấu sắp tới</string>
    <string name="match_title">Hà Nội FC vs Hoàng Anh Gia Lai</string>
    <string name="date_label">NGÀY</string>
    <string name="time_label">GIỜ</string>
    <string name="stadium_label">SÂN</string>
    <string name="match_date">24/10</string>
    <string name="match_time">19:15</string>
    <string name="match_stadium">Hàng Đẫy</string>
    <string name="buy_tickets">MUA VÉ TỪ 150K</string>
    <string name="add_to_cart">Thêm vào giỏ</string>
    <string name="club_logo">Logo câu lạc bộ</string>
    <string name="ticket_icon">Biểu tượng vé</string>

    <string name="league_mark">V</string>
    <string name="league_title">V.LEAGUE</string>
    <string name="league_tagline">NI&#7872;M T&#7920; H&#192;O B&#211;NG &#272;&#193; VI&#7878;T</string>
    <string name="notification_icon">Thông báo</string>
    <string name="profile_avatar_placeholder">Tài khoản</string>
    <string name="ticket_emoji">Vé</string>
    <string name="jersey_emoji">Áo đấu</string>
    <string name="soccer_emoji">Bóng đá</string>
    <string name="welcome_back">Chào mừng trở lại,</string>
    <string name="user_name">Người hâm mộ</string>
    <string name="matchday_status">Sẵn sàng cho vòng đấu mới?</string>
    <string name="live_story_desc">Tin trực tiếp</string>
    <string name="live_label">TRỰC TIẾP</string>
    <string name="highlights_story_desc">Điểm nhấn trận đấu</string>
    <string name="highlights_label">ĐIỂM NHẤN</string>
    <string name="goals_story_desc">Bàn thắng</string>
    <string name="goals_label">BÀN THẮNG</string>
    <string name="behind_story_desc">Hậu trường</string>
    <string name="behind_label">HẬU TRƯỜNG</string>
    <string name="featured_derby_day">NỔI BẬT   DERBY</string>
    <string name="featured_match_teams">TP.HCM vs\nHà Nội FC</string>
    <string name="get_tickets">MUA VÉ  &gt;</string>
    <string name="season_label">2025/26</string>
    <string name="dot_separator">&#8226;</string>
    <string name="live_match_title">Trận nổi bật</string>
    <string name="view_all_arrow">XEM TẤT CẢ &gt;</string>
    <string name="stadium_status">S&#226;n v&#7853;n &#273;&#7897;ng PVF &#8226; AP</string>
    <string name="da_nang_logo_desc">Logo Đà Nẵng</string>
    <string name="da_nang_label">ĐÀ NẴNG</string>
    <string name="score_placeholder">1 (4) : 1 (5)</string>
    <string name="live_now_label">ĐANG DIỄN RA</string>
    <string name="hai_phong_logo_desc">Logo Hải Phòng</string>
    <string name="hai_phong_label">HẢI PHÒNG</string>
    <string name="inside_pitch_title">Tin trong sân</string>
    <string name="breaking_label">TIN NÓNG</string>
    <string name="breaking_news_content">CHÚC MỪNG\nCLB CÔNG AN HÀ NỘI</string>
    <string name="news_meta">TIN TỨC &#8226; 2 GIỜ TRƯỚC</string>
    <string name="transfer_news_title">Chuyển nhượng: 5 gương mặt\nđáng chú ý tuần này</string>
    <string name="score_gallery_placeholder">1  HẾT TRẬN  3</string>
    <string name="gallery_label">ẢNH</string>
    <string name="golden_boot_title">Cuộc đua Vua phá lưới\nnóng dần</string>
    <string name="tactical_preview_label">PHÂN TÍCH\nCHIẾN THUẬT</string>
    <string name="preview_label">NHẬN ĐỊNH</string>
    <string name="midfield_analysis_title">Phân tích chiến thuật:\nCuộc chiến tuyến giữa</string>
    <string name="trophy_challenge_label">THỬ THÁCH CỔ ĐỘNG VIÊN</string>
    <string name="predict_win_title">Dự đoán nhận quà</string>
    <string name="challenge_desc">Dự đoán tỷ số trận đấu\nvà nhận vé VIP.</string>
    <string name="play_now_label">THAM GIA</string>
    <string name="nav_home">Trang chủ</string>
    <string name="nav_matches">Trận đấu</string>
    <string name="nav_shop">Cửa hàng</string>
    <string name="nav_news">Tin tức</string>
    <string name="nav_profile">Cá nhân</string>
    <string name="home_loading_message">&#272;ang t&#7843;i d&#7919; li&#7879;u tr&#7853;n &#273;&#7845;u v&#224; tin t&#7913;c...</string>
    <string name="home_featured_match_format">%1$s vs\n%2$s</string>
    <string name="home_match_venue_status_format">%1$s &#8226; %2$s</string>
    <string name="home_news_meta_format">%1$s &#8226; M&#7898;I NH&#7844;T</string>
    <string name="home_tab">Trang chủ</string>
    <string name="matches_tab">Trận đấu</string>
    <string name="shop_tab">Cửa hàng</string>
    <string name="news_tab">Tin tức</string>
    <string name="profile_tab">Cá nhân</string>
    <string name="standings_tab">Bảng xếp hạng</string>
    <string name="fixtures_tab">Lịch đấu</string>
    <string name="club_logo_desc">Logo câu lạc bộ</string>
</resources>
