<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="106dp"
    android:background="@color/colorSurface">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_top_bar_dark"
        android:elevation="0dp"
        android:paddingStart="20dp"
        android:paddingEnd="12dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgHeaderLogo"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/app_name"
            android:padding="0dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/HeaderLogoShape" />

        <LinearLayout
            android:id="@+id/layoutHeaderBrand"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/imgHeaderLogo"
            app:layout_constraintEnd_toStartOf="@id/btnHeaderNotification"
            app:layout_constraintStart_toEndOf="@id/imgHeaderLogo"
            app:layout_constraintTop_toTopOf="@id/imgHeaderLogo">

            <TextView
                android:id="@+id/tvHeaderTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="sans-serif-condensed"
                android:includeFontPadding="false"
                android:letterSpacing="0"
                android:maxLines="1"
                android:text="@string/league_title"
                android:textColor="@color/red_energy"
                android:textSize="25sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/tvHeaderSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif-condensed"
                android:includeFontPadding="false"
                android:letterSpacing="0.08"
                android:maxLines="1"
                android:text="@string/league_tagline"
                android:textColor="@color/dark_gray_text"
                android:textSize="10sp"
                android:textStyle="italic"
                android:visibility="visible" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/btnHeaderNotification"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_header_action"
            android:clickable="true"
            android:contentDescription="@string/notification_icon"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnHeaderProfile"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:padding="2dp"
                android:scaleType="centerInside"
                android:src="@drawable/notifications_active_24"
                app:tint="@color/stadium_ink" />

            <View
                android:id="@+id/viewHeaderNotificationDot"
                android:layout_width="9dp"
                android:layout_height="9dp"
                android:layout_gravity="top|end"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="7dp"
                android:background="@drawable/bg_header_notification_dot"
                android:visibility="gone" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/btnHeaderProfile"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:background="@drawable/bg_header_avatar"
            android:clickable="true"
            android:contentDescription="@string/profile_avatar_placeholder"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="@id/btnHeaderNotification"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/btnHeaderNotification">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:padding="2dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_person_24"
                app:tint="@color/stadium_ink" />
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
